--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
+    "nuxt-icon": "^0.6.10",
+    "postcss": "^8.4.38",
     "typescript": "^5.4.5",
     "typescript-language-server": "^4.3.3",
     "vue": "^3.4.27",
