--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "nuxt": "^3.11.2",
     "nuxt-icon": "^0.6.10",
     "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "typescript": "^5.4.5",
     "typescript-language-server": "^4.3.3",
     "vue": "^3.4.27",
